# Casper-Clicker

./: .gitignore  BLOCKCHAIN_DEPLOYMENT.md  DEPLOIEMENT.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOY_GUIDE.md  DEPLOY_VIA_CASPER_SIGNER.md  LICENSE  Makefile  README.md  TESTNET_KEYS.md  blockchain.js  deploy-contract.html  deploy-contract.sh  deploy-testnet.sh  deploy-transaction.json  deploy-web.html  deploy.sh  game.js  get-contract-hash.sh  index.html  package-lock.json  package.json  style.css  vercel.json
assets/: blockchain.js  game.js  ghostBackground.js  style.css
contract/: .env  Cargo.toml  Makefile  Odra.toml  build.rs  justfile  rust-toolchain.toml  test_contract_call.sh
contract/src/: casperclicker.rs  lib.rs  lib.rs.old  main.rs  tests.rs
contract/wasm/: CasperClicker.wasm
docs/: CONTRACT_STATUS.md  DORAHACKS_SUBMISSION.txt  HACKATHON_SUBMISSION.md  ODRA_MIGRATION.md
public/: config.js
src/: App.tsx  globals.d.ts  index.css  main.tsx
src/components/: ClickButton.tsx  Confetti.tsx  CustomCursor.tsx  GhostBackground.tsx  Header.tsx  StatsPanel.tsx  Toast.tsx  UpgradesPanel.tsx
src/hooks/: useCsprClick.ts
src/stores/: gameStore.ts
src/types/: game.ts
