[package]
name = "casperclicker-contract"
version = "1.0.0"
edition = "2021"

[dependencies]
odra = "2.4.0"

[dev-dependencies]
odra-test = "2.4.0"

[build-dependencies]
odra-build = "2.4.0"

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

