[package]
name = "casperclicker-contract"
version = "1.0.0"
edition = "2021"

[dependencies]
odra = { version = "2.4.0", default-features = false }

[dev-dependencies]
odra-test = { version = "2.4.0", default-features = false }

[build-dependencies]
odra-build = { version = "2.4.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.4.0", default-features = false }
odra-cli = { version = "2.4.0", default-features = false }

[[bin]]
name = "casperclicker_contract_build_contract"
path = "bin/build_contract.rs"
test = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

